# horus-deploy

./: .envrc  .gitignore  CHANGES.md  LICENSE  README.md  flake.nix  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: README.md  installation.md  usage.md  writing-deploy-scripts.md
horus_deploy/: _config.py  cli.py  default_id_ed25519  default_id_ed25519.pub  deploys.py  discovery.py  host.py  metadata.py  ssh.py  utils.py
horus_deploy/builtin_deploy_scripts/: diagnostics.py  install_package.py  install_ssh_key.py  install_webbuilder.py  mender.py  mender_commit.py  reboot.py  timedate.py  uname.py  uninstall_package.py
horus_deploy/operations/: package.py  system.py
nix/: pyinfra.nix
tests/: test_cli.py  test_deploys.py  test_metadata.py  test_operations.py  test_utils.py
tests/testdata/deploy_scripts/builtin/: a.py  empty.py  invalid_metadata.py
tests/testdata/deploy_scripts/local/: c.py
tests/testdata/deploy_scripts/user/b/: deploy.py
