[metadata]
name = horus_deploy
version = attr: horus_deploy.__version__
author = Horus View and Explore B.V.
author_email = info@horus.nu
description = Configuration deployment for Horus devices.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
packages =
    horus_deploy
    horus_deploy.builtin_deploy_scripts
    horus_deploy.operations
include_package_data = True
install_requires =
    click
    pyinfra==1.7.3
    tabulate
    zeroconf

[options.package_data]
horus_deploy =
    default_id_ed25519
    default_id_ed25519.pub

[options.entry_points]
console_scripts =
    horus-deploy = horus_deploy.cli:main

[aliases]
test=pytest

[tool:pytest]
addopts = -s --cov=horus_deploy --cov-branch --cov-append --cov-report=term --cov-config=setup.cfg

[flake8]
exclude =
    .pytest_cache,
    .eggs,
    *.egg-info,
    dist,
    venv,
    env,
    build
max-complexity = 10
max-line-length = 100

[mypy]

[mypy-pyinfra]
ignore_missing_imports = True

[mypy-pyinfra.*]
ignore_missing_imports = True

[coverage:report]
omit = horus_deploy/builtin_deploy_scripts/*
